--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <ul>
           <li>
             <img
-              src="./images/our-portfolio/img (6).jpg"
+              src="./images/our-portfolio/img6.jpg"
               alt="Banking App"
               width="360"
               height="300"
@@ -152,7 +152,7 @@
           </li>
           <li>
             <img
-              src="./images/our-portfolio/img (5) (1).jpg"
+              src="./images/our-portfolio/img5.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
@@ -162,7 +162,7 @@
           </li>
           <li>
             <img
-              src="./images/our-portfolio/img (4) (1).jpg"
+              src="./images/our-portfolio/img4.jpg"
               alt="Meditation App"
               width="360"
               height="300"
@@ -172,7 +172,7 @@
           </li>
           <li>
             <img
-              src="./images/our-portfolio/img (3) (1).jpg"
+              src="./images/our-portfolio/img3.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
@@ -182,7 +182,7 @@
           </li>
           <li>
             <img
-              src="./images/our-portfolio/img (2) (1).jpg"
+              src="./images/our-portfolio/img2.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
@@ -192,7 +192,7 @@
           </li>
           <li>
             <img
-              src="./images/our-portfolio/img (1) (1).jpg"
+              src="./images/our-portfolio/img1.jpg"
               alt="Online Courses"
               width="360"
               height="300"
