--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body>
+  <body class="body">
     <!-- #region header -->
     <header class="header-page">
       <nav class="nav-page">
@@ -27,7 +33,9 @@
           >Web<span class="logo-studio">Studio</span></a
         >
         <ul class="nav-list">
-          <li class="nav-item"><a class="nav-item-link" href="">Studio</a></li>
+          <li class="nav-item">
+            <a class="nav-item-link" href="./index.html">Studio</a>
+          </li>
           <li class="nav-item">
             <a class="nav-item-link" href="">Portfolio</a>
           </li>
@@ -36,7 +44,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
           <li>
             <a class="address-list" href="mailto:info@devstudio.com"
@@ -92,8 +100,8 @@
         </ul>
       </section>
       <section class="section-three">
-        <h2>Our Team</h2>
-        <ul>
+        <h2 class="our-team">Our Team</h2>
+        <ul class="sec-list">
           <li>
             <img
               src="./images/our-team/mark-guerrero.jpg"
@@ -138,7 +146,7 @@
       </section>
       <!-- our-portfolio -->
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="our-portfolio">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -147,7 +155,7 @@
               width="360"
               height="300"
             />
-            <h2 class="name-team">Banking App</h2>
+            <h3 class="h-four">Banking App</h3>
             <p class="about-team">App</p>
           </li>
           <li>
@@ -157,7 +165,7 @@
               width="360"
               height="300"
             />
-            <h2 class="name-team">Cashless Payment</h2>
+            <h3 class="h-four">Cashless Payment</h3>
             <p class="about-team">Marketing</p>
           </li>
           <li>
@@ -167,7 +175,7 @@
               width="360"
               height="300"
             />
-            <h2 class="name-team">Meditation App</h2>
+            <h3 class="h-four">Meditation App</h3>
             <p class="about-team">App</p>
           </li>
           <li>
@@ -177,7 +185,7 @@
               width="360"
               height="300"
             />
-            <h2 class="name-team">Taxi Service</h2>
+            <h3 class="h-four">Taxi Service</h3>
             <p class="about-team">Marketing</p>
           </li>
           <li>
@@ -187,7 +195,7 @@
               width="360"
               height="300"
             />
-            <h2 class="name-team">Screen Illustrations</h2>
+            <h3 class="h-four">Screen Illustrations</h3>
             <p class="about-team">Design</p>
           </li>
           <li>
@@ -197,7 +205,7 @@
               width="360"
               height="300"
             />
-            <h2 class="name-team">Online Courses</h2>
+            <h3 class="h-four">Online Courses</h3>
             <p class="about-team">Marketing</p>
           </li>
         </ul>
