--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
       </section>
       <section class="section-three">
         <h2 class="our-team">Our Team</h2>
-        <ul class="sec-list">
-          <li>
+        <ul>
+          <li class="sec-list">
             <img
               src="./images/our-team/mark-guerrero.jpg"
               alt="Mark Guerrero avatar"
@@ -112,7 +112,7 @@
             <h3 class="name-team">Mark Guerrero</h3>
             <p class="about-team">Product Designer</p>
           </li>
-          <li>
+          <li class="sec-list">
             <img
               src="./images/our-team/tom-ford.jpg"
               alt="Tom Ford avatar"
@@ -122,7 +122,7 @@
             <h3 class="name-team">Tom Ford</h3>
             <p class="about-team">Frontend Developer</p>
           </li>
-          <li>
+          <li class="sec-list">
             <img
               src="./images/our-team/camila-garcia.jpg"
               alt="Camila Garcia avatar"
@@ -132,7 +132,7 @@
             <h3 class="name-team">Camila Garcia</h3>
             <p class="about-team">Marketing</p>
           </li>
-          <li>
+          <li class="sec-list">
             <img
               src="./images/our-team/daniel-wilson.jpg"
               alt="Daniel Wilson avatar"
